--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -6,13 +6,39 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="controller.js"></script>
   <title>welcome to Real News Plat.</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/navstyle.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/navstyle.css">
+  <style media="screen">
+
+    #content {
+      width: 700px;
+      padding: 20px;
+      margin-bottom: 20px;
+      float: left;
+      border: 1px solid #bcbcbc;
+    }
+
+    #sidebar {
+      width: 350px;
+      padding: 20px;
+      margin-bottom: 20px;
+      float: right;
+      border: 1px solid #bcbcbc;
+    }
+
+    #users {
+      font-size: 20px;
+      padding-right: 15px;
+      font-weight: bold;
+    }
+
+    #category {}
+  </style>
 </head>
 <nav>
   <div id="topMenu">
     <div id="navBar">
       <div id="logo" style='display:inline;'>
-        <img src="resources/logo.jpg" width="30%" height="30%" margin="30px;">
+        <img src="../resources/logo.png" width="30%" height="30%" margin="30px;">
       </div>
       <div id="searchBar" style='display:inline; margin-left: 70px;'>
         <input type="text" id="search" placeholder="검색어 입력">
@@ -21,7 +47,7 @@
       <div id="log" style='display:inline; margin-left: 100px;'>
         <input class="log" id="id" type="text" placeholder="id">
         <input class="log" id="password" type="password" placeholder="password">
-        <button type="button" name="loginButton" onclick="logIn($('#id').val(), $('#password').val())">로그인</button>
+        <button type="button" id="loginButton" onclick="logIn($('#id').val(), $('#password').val())">로그인</button>
       </div>
     </div>
     <div id="menu">
@@ -34,7 +60,96 @@
 </nav>
 
 <body>
-  <h1>최신글</h1>
+    <div id="content">
+      <script type="text/javascript">
+        $(document).ready(function() {
+          $.ajax({
+            type: 'GET',
+            url: "http://35.234.3.182:9009/api/v1.0/news",
+            beforeSend: function(xhr) {
+              xhr.setRequestHeader("Authorization", "Basic " + btoa("t2" + ":" + "t2"));
+            },
+            data: {},
+            success: function(data) {
+              tempdata = data;
+              var init = 0;
+              for (var i = 0; i < data.length; i++) {
+                if (tempdata.news[i].title !== undefined) {
+                  init = i;
+                  break;
+                }
+              }
+              for (var i = init; i < init+7; i++) {
+                var tempTitle = tempdata.news[i].title;
+                var tempAuthor = tempdata.news[i].author;
+                var tempStar = tempdata.news[i].starcount;
+                var tempField = tempdata.news[i].field;
+                var tempAsso = tempdata.news[i].associated_reply;
+                var space = " ";
+                $("#articles").append("</br>"+tempField +"</br>");
+                $("#articles").append("<h3>" +space + tempTitle + space + "<img src = '../resources/user.jpg' width = 30px; height = 30px;></img>" + space + tempAuthor + "</h3>");
+                $("#articles").append("<img src = '../resources/star.jpg' width = 15px; height = 15px;></img>" + space + tempStar + space);
+                $("#articles").append("<img src = '../resources/agree.jpg' width = 15px; height = 15px;></img>" + space + tempAsso + "</br>");
+              }
+
+            },
+            error: function() {
+              alert("article error!");
+            }
+          })
+        });
+      </script>
+      <table style="width:100%" id="articles">
+      </table>
+    </div>
+    <div id="sidebar">
+      <script type="text/javascript">
+        $(document).ready(function() {
+          $.ajax({
+            type: 'GET',
+            url: "http://35.234.3.182:9009/api/v1.0/users/star",
+            beforeSend: function(xhr) {
+              xhr.setRequestHeader("Authorization", "Basic " + btoa("t2" + ":" + "t2"));
+            },
+            data: {},
+            success: function(data) {
+              console.log("success");
+              tempdata = data;
+              for (var i = 0; i < tempdata.users.length; i++) {
+                var tempName = tempdata.users[i].realname;
+                var tempStar = tempdata.users[i].starcount;
+                var space = " ";
+                var count = i + 1;
+                $("#users").append(count + ". " + space + "<img src = '../resources/diamond.png' height = 15px; width = 15px;></img>" + space + tempName + "<img src = '../resources/star.jpg' height = 15px; width = 15px;>" + tempStar + "</br>");
+              }
+            },
+            error: function() {
+              alert("user-ranking error!");
+            }
+          })
+        });
+      </script>
+      <table id="category">
+        <h2>주제</h2>
+        <tr>정치</br>
+        </tr>
+        <tr>경제</br>
+        </tr>
+        <tr>사회</br>
+        </tr>
+        <tr>시사</br>
+        </tr>
+        <tr>연예</br>
+        </tr>
+        <tr>스포츠</br>
+        </tr>
+        <tr>기타</br>
+        </tr>
+      </table>
+      <table id="users">
+        <h2>유저순위</h2>
+      </table>
+    </div>
 </body>
 
 </html>
