--- a/static/notice.html
+++ b/static/notice.html
@@ -6,13 +6,13 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="controller.js"></script>
   <title>welcome to Real News Plat.</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/navstyle.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/navstyle.css">
 </head>
 <nav>
   <div id="topMenu">
     <div id="navBar">
       <div id="logo" style='display:inline;'>
-        <img src="resources/logo.jpg" width="30%" height="30%" margin="30px;">
+        <img src="../resources/logo.png" width="30%" height="30%" margin="30px;">
       </div>
       <div id="searchBar" style='display:inline; margin-left: 70px;'>
         <input type="text" id="search" placeholder="검색어 입력">
@@ -21,7 +21,7 @@
       <div id="log" style='display:inline; margin-left: 100px;'>
         <input class="log" id="id" type="text" placeholder="id">
         <input class="log" id="password" type="password" placeholder="password">
-        <button type="button" name="loginButton" onclick="logIn($('#id').val(),$('#password').val())">로그인</button>
+        <button type="button" id="loginButton" onclick="logIn($('#id').val(),$('#password').val())">로그인</button>
       </div>
     </div>
     <div id="menu">
@@ -30,6 +30,7 @@
       <a class="menubtn" id="latest" type="button" name="button" onclick="goToDashboard()">최신글</a>
       <a class="menubtn" id="rangking" type="button" name="button" onclick="goToRanking()">순위</a>
       <a class="menubtn" id="write" type="button" name="button" onclick="goToWritePage()">글쓰기</a>
+      </div>
 </nav>
 
 <body>
@@ -39,7 +40,7 @@
       <li>Real News Platform</li>
       <li>팀원 : 박선우, 김민상, 이주영, 김석환, 임태완, 김효경, 김지윤, 김명준</li>
       <li>입상 하면 좋겠다 ㅎㅎㅎ</li>
-      <img src="resources/hash.jpg">
+      <img src="../resources/hash.jpg">
     </ul>
   </div>
 </body>
