--- a/user_rank_page.html
+++ b/user_rank_page.html
@@ -181,7 +181,7 @@
         $(document).ready(function() {
           $.ajax({
             type: 'GET',
-            url: "http://35.234.3.182:9009/api/v1.0/users",
+            url: "http://35.234.3.182:9009/api/v1.0/users/star",
             beforeSend: function(xhr) {
               xhr.setRequestHeader("Authorization", "Basic " + btoa("ksh" + ":" + "ksh"));
             },
