--- a/static/notice.html
+++ b/static/notice.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="controller.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>welcome to Real News Plat.</title>
-  <link rel="stylesheet" type="text/css" href="../stylesheets/navstyle.css">
 </head>
 <nav>
   <div id="topMenu">
@@ -16,21 +17,31 @@
       </div>
       <div id="searchBar" style='display:inline; margin-left: 70px;'>
         <input type="text" id="search" placeholder="검색어 입력">
-        <button type="button" name="searchButton">검색</button>
+        <button type="button" class="btn btn-info" id="searchButton">Search</button>
       </div>
       <div id="log" style='display:inline; margin-left: 100px;'>
         <input class="log" id="id" type="text" placeholder="id">
         <input class="log" id="password" type="password" placeholder="password">
-        <button type="button" id="loginButton" onclick="logIn($('#id').val(),$('#password').val())">로그인</button>
+        <button type="button" class="btn btn-primary" id="loginButton" onclick="logIn($('#id').val(), $('#password').val())">Login</button>
       </div>
     </div>
-    <div id="menu">
-      <a class="menubtn" id="notice" type="button" name="button" onclick="goToNotice()">공지사항</a>
-      <a class="menubtn" id="popular" type="button" name="button" onclick="goToPopular()">인기글</a>
-      <a class="menubtn" id="latest" type="button" name="button" onclick="goToDashboard()">최신글</a>
-      <a class="menubtn" id="rangking" type="button" name="button" onclick="goToRanking()">순위</a>
-      <a class="menubtn" id="write" type="button" name="button" onclick="goToWritePage()">글쓰기</a>
-    </div>
+    <ul class="nav" id = "menu">
+  <li class="nav-item">
+    <a class="nav-link" href="notice.html">공지사항</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="popular.html">인기글</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="dashboard.html">최신글</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="posting.html">글쓰기</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="user_rank_page.html">유저순위</a>
+  </li>
+</ul>
 </nav>
 
 <body>
