--- a/static/popular.html
+++ b/static/popular.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="controller.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <style media="screen">
     #container {
       width: 1200px;
@@ -31,7 +33,6 @@
     }
   </style>
   <title>welcome to Real News Plat.</title>
-  <link rel="stylesheet" type="text/css" href="../stylesheets/navstyle.css">
 </head>
 <nav>
   <div id="topMenu">
@@ -41,21 +42,31 @@
       </div>
       <div id="searchBar" style='display:inline; margin-left: 70px;'>
         <input type="text" id="search" placeholder="검색어 입력">
-        <button type="button" name="searchButton">검색</button>
+        <button type="button" class="btn btn-info" id="searchButton">Search</button>
       </div>
       <div id="log" style='display:inline; margin-left: 100px;'>
         <input class="log" id="id" type="text" placeholder="id">
         <input class="log" id="password" type="password" placeholder="password">
-        <button type="button" id="loginButton" onclick="logIn($('#id').val(),$('#password').val())">로그인</button>
+        <button type="button" class="btn btn-primary" id="loginButton" onclick="logIn($('#id').val(), $('#password').val())">Login</button>
       </div>
     </div>
-    <div id="menu">
-      <a class="menubtn" id="notice" type="button" name="button" onclick="goToNotice()">공지사항</a>
-      <a class="menubtn" id="popular" type="button" name="button" onclick="goToPopular()">인기글</a>
-      <a class="menubtn" id="latest" type="button" name="button" onclick="goToDashboard()">최신글</a>
-      <a class="menubtn" id="rangking" type="button" name="button" onclick="goToRanking()">순위</a>
-      <a class="menubtn" id="write" type="button" name="button" onclick="goToWritePage()">글쓰기</a>
-    </div>
+    <ul class="nav" id = "menu">
+  <li class="nav-item">
+    <a class="nav-link disabled" href="notice.html">공지사항</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="popular.html">인기글</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="dashboard.html">최신글</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="posting.html">글쓰기</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="user_rank_page.html">유저순위</a>
+  </li>
+</ul>
 </nav>
 
 <body>
@@ -66,7 +77,7 @@
           type: 'GET',
           url: "http://35.234.3.182:9009/api/v1.0/news/star",
           beforeSend: function(xhr) {
-            xhr.setRequestHeader("Authorization", "Basic " + btoa("t2" + ":" + "t2"));
+            xhr.setRequestHeader("Authorization", "Basic " + btoa("minsangkim" + ":" + "1234"));
           },
           data: {},
           success: function(data) {
@@ -89,10 +100,12 @@
               var tempStar = tempdata.news[i].starcount;
               var tempField = tempdata.news[i].field;
               var tempAsso = tempdata.news[i].associated_reply;
+              var news_id = tempdata.news[i].id;
+              var url = "temp.html?news_id=" + news_id;
               var space = " ";
               $("#articles").append("</br><img src = '../resources/news.jpg' height = 100px; width = 200px;></img>");
-              $("#articles").append("<span>"+space + tempTitle + space);
-              $("#articles").append("<img src = '../resources/user.jpg' width = 15px; height = 15px;></img>" + space + tempAuthor + space);
+              $("#articles").append("<span><a href = " + url + ">"+space + tempTitle + space);
+              $("#articles").append("</a></br><img src = '../resources/user.jpg' width = 15px; height = 15px;></img>" + space + tempAuthor + space);
               $("#articles").append("<img src = '../resources/star.jpg' width = 15px; height = 15px;></img>" + space + tempStar + space);
               $("#articles").append("<img src = '../resources/agree.jpg' width = 15px; height = 15px;></img></span>" + space + tempAsso + "</br><hr>");
             }
@@ -114,7 +127,7 @@
           type: 'GET',
           url: "http://35.234.3.182:9009/api/v1.0/users/star",
           beforeSend: function(xhr) {
-            xhr.setRequestHeader("Authorization", "Basic " + btoa("t2" + ":" + "t2"));
+            xhr.setRequestHeader("Authorization", "Basic " + btoa("minsangkim" + ":" + "1234"));
           },
           data: {},
           success: function(data) {
@@ -135,19 +148,21 @@
         })
       });
     </script>
-    <div id="category">
-      <h2>주제</h2>
-      <h5>정치</h5>
-      <h5>경제</h5>
-      <h5>사회</h5>
-      <h5>시사</h5>
-      <h5>연예</h5>
-      <h5>스포츠</h5>
-      <h5>기타<hr></h5>
+    <div class="container">
+      <h2><span class="badge badge-secondary">주제</span></h2>
+      <h6>정치</h6>
+      <h6>경제</h6>
+      <h6>사회</h6>
+      <h6>시사</h6>
+      <h6>연예</h6>
+      <h6>스포츠</h6>
+      <h6>경제<hr></h6>
     </div>
-    <table id="users">
-      <h2>유저순위</h2>
-    </table>
+    <div class="table-responsive">
+      <table class = "table" id="users">
+        <h2><span class="badge badge-secondary">유저순위</span></h2>
+      </table>
+    </div>
   </div>
 </body>
 
