--- a/user_rank_page.html
+++ b/user_rank_page.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="controller.js"></script>
 	<title>랭킹</title>
   <style media="screen">
     #users {
@@ -14,7 +15,7 @@
     font-weight: bold;
     }
     #sidebar {
-    width: 250px;
+    width: 330px;
     padding: 20px;
     margin-bottom: 20px;
     float: right;
@@ -139,7 +140,7 @@
         $(document).ready(function() {
           $.ajax({
             type: 'GET',
-            url: "http://35.234.3.182:9009/api/v1.0/users",
+            url: "http://35.234.3.182:9009/api/v1.0/users/star",
             beforeSend: function(xhr) {
               xhr.setRequestHeader("Authorization", "Basic " + btoa("ksh" + ":" + "ksh"));
             },
@@ -209,6 +210,10 @@
                         $("#userlist").append("<img src = '../resources/bronze.png' height = 30px; width = 30px;></img>");
                       $("#userlist").append(space + tempName + space + "<img src = '../resources/user.jpg' height = 30px; width = 30px;></img>" + "</br>");
                       $("#user_star").append("<img src = '../resources/star.jpg' height = 30px; width = 30px;>" + tempStar + "</br>");
+
+
+
+
                   },
                   error: function() {
                     alert("user-ranking error!");
@@ -246,8 +251,17 @@
                 var tempStar = tempdata.users[i].starcount;
                 var space = " ";
                 var count = i + 1;
-                $("#users").append(count + ". " + space + "<img src = '../resources/silver.png' height = 15px; width = 15px;></img>" + space + tempName + "<img src = '../resources/star.jpg' height = 15px; width = 15px;>" + tempStar +
-                  "</br>");
+                if(tempStar > 99999)
+                  $("#users").append("<img src = '../resources/diamond.png' height = 30px; width = 30px;></img>");
+                else if(tempStar > 49999)
+                  $("#users").append("<img src = '../resources/platinum.png' height = 30px; width = 30px;></img>");
+                else if(tempStar > 9999)
+                  $("#users").append("<img src = '../resources/gold.png' height = 30px; width = 30px;></img>");
+                else if(tempStar > 4999)
+                  $("#users").append("<img src = '../resources/silver.png' height = 30px; width = 30px;></img>");
+                else if(tempStar >= 0)
+                  $("#users").append("<img src = '../resources/bronze.png' height = 30px; width = 30px;></img>");
+                $("#users").append(space + tempName + space + "<img src = '../resources/user.jpg' height = 30px; width = 30px;></img>" + "<img src = '../resources/star.jpg' height = 30px; width = 30px;>" + tempStar + "</br>");
               }
             },
             error: function() {
